# zbag-app-tauri

./: .env.development  .gitignore  .gitleaksignore  .plan-state.json  1.md  2.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  HOW_TO_BUILD_BAGZ_ON_MAC.md  HOW_TO_BUILD_BAGZ_ON_WINDOWS.md  HOW_TO_BUILD_ZBAG_ON_LINUX.md  HOW_TO_BUILD_ZBAG_ON_MAC.md  HOW_TO_BUILD_ZBAG_ON_WINDOWS.md  HOW_TO_BUILD_ZSTASH_ON_LINUX.md  HOW_TO_BUILD_ZSTASH_ON_MAC.md  HOW_TO_BUILD_ZSTASH_ON_WINDOWS.md  LICENSE  Makefile  README.md  RUN_LOG.md  SECURITY.md  THIRD_PARTY_NOTICES.md  VERSIONING.md  cliff.toml  justfile  notes.md
apps/bagz-cli/: Cargo.toml
apps/bagz-cli/src/: cli_app_state.rs  file_key_store.rs  main.rs  output.rs  password.rs  progress.rs
apps/bagz-cli/src/commands/: address.rs  backup.rs  balance.rs  seed.rs  server.rs  sync.rs  tx.rs  wallet.rs
apps/zbag-cli/: Cargo.toml
apps/zbag-cli/src/: cli_app_state.rs  file_key_store.rs  main.rs  output.rs  password.rs  progress.rs
apps/zbag-cli/src/commands/: address.rs  backup.rs  balance.rs  seed.rs  server.rs  sync.rs  tx.rs  wallet.rs
apps/zkore-app-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/zkore-app-tauri/src-tauri/src/: events.rs  lib.rs  main.rs  state.rs  windows.rs
apps/zkore-cli/: Cargo.toml
apps/zkore-cli/src/: cli_app_state.rs  file_key_store.rs  progress.rs
apps/zkore-cli/src/commands/: backup.rs  server.rs  sync.rs
apps/zstash-app-tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/zstash-app-tauri/src-tauri/capabilities/: default.json
apps/zstash-app-tauri/src-tauri/icons/: icon.icns
apps/zstash-app-tauri/src-tauri/src/: events.rs  exchange_logic.rs  lib.rs  main.rs  menu.rs  server_logic.rs  state.rs  test_bridge.rs  wallet_logic.rs  (+1 more)
apps/zstash-cli/: Cargo.toml
apps/zstash-cli/src/: cli_app_state.rs  file_key_store.rs  main.rs  output.rs  password.rs  progress.rs
apps/zstash-tui/: Cargo.toml
apps/zstash-tui/examples/: decrypt_wallet.rs
apps/zstash-tui/src/: app.rs  main.rs
crates/bagz-engine/: Cargo.toml
crates/bagz-engine/src/: account_key_source.rs  address_service.rs  balance.rs  birthday.rs  broadcast.rs  encryption.rs  grpc_url.rs  job_service.rs  key_store.rs  key_store_keychain.rs  logging.rs  reauth.rs  server_resolver.rs  swap_service.rs  sync_service.rs  tx_service.rs  wallet_manager.rs
crates/bagz-engine/tests/: app_db_migrations.rs  job_service.rs  memo_enhancement.rs  reauth_tokens.rs  regression_no_secret_logging.rs  server_resolver.rs  sqlite_concurrency.rs  sync_real_scan_cancellation.rs  us10_swap_exact_output.rs  us11_wallet_status.rs  us12_network_rules.rs  us15_server_config.rs  us16_swap_status_refresh.rs  us1_backup_challenge.rs  us2_send_proposals.rs  us3_shielding.rs  us4_restore.rs  us5_address_rotation.rs  us6_import_ufvk.rs  us7_signing_request_rules.rs  us8_swap_to_zec.rs  us9_swap_from_zec.rs  wallet_db_encryption_and_migrations.rs
crates/bagz-keystone/: Cargo.toml
crates/bagz-keystone/src/: lib.rs
crates/bagz-keystone/tests/: us6_ufvk.rs  us7_fr028_no_branding.rs  us7_malformed_payloads.rs  us7_pczt.rs
crates/zkore-engine/: Cargo.toml
crates/zkore-engine/src/: account_key_source.rs  address_service.rs  balance.rs  birthday.rs  encryption.rs  error.rs  key_store.rs  key_store_keychain.rs  lib.rs  logging.rs  reauth.rs  server_resolver.rs  swap_service.rs  sync_service.rs  tokio_runtime.rs  tx_service.rs  wallet_manager.rs
crates/zkore-engine/tests/: app_db_migrations.rs  reauth_tokens.rs  regression_no_secret_logging.rs  server_resolver.rs  us11_wallet_status.rs  us12_network_rules.rs  us15_server_config.rs  us1_backup_challenge.rs  us2_send_proposals.rs  us3_shielding.rs  us4_restore.rs  us5_address_rotation.rs  us6_import_ufvk.rs  us7_signing_request_rules.rs  us9_swap_from_zec.rs  wallet_db_encryption_and_migrations.rs
crates/zkore-keystone/: Cargo.toml
crates/zkore-keystone/src/: lib.rs  payload.rs  pczt.rs  ufvk.rs
crates/zkore-keystone/tests/: us6_ufvk.rs  us7_fr028_no_branding.rs  us7_pczt.rs
crates/zkore-network/: Cargo.toml
crates/zkore-network/src/: grpc_client.rs  http_client.rs  lib.rs  near_intents.rs  transport.rs
crates/zkore-network/tests/: ci_lightwalletd_probe.rs  us8_near_intents.rs
crates/zkore-tor/: Cargo.toml
crates/zkore-tor/src/: lib.rs  manager.rs
crates/zkore-tor/tests/: us10_tor_state.rs
crates/zstash-core/: Cargo.toml  build.rs
crates/zstash-core/src/: errors.rs  lib.rs  permissions.rs  sensitive.rs  version.rs
crates/zstash-core/tests/: ipc_v1_contract_json.rs
crates/zstash-engine/: Cargo.toml
crates/zstash-engine/src/: account_key_source.rs  address_service.rs  birthday.rs  broadcast.rs  encryption.rs  job_service.rs  key_store.rs  key_store_keychain.rs  lib.rs  logging.rs  permissions.rs  reauth.rs  server_resolver.rs  swap_service.rs  sync_service.rs  tokio_runtime.rs  tx_service.rs  wallet_manager.rs
crates/zstash-engine/tests/: app_db_migrations.rs  memo_enhancement.rs  regression_no_secret_logging.rs  server_resolver.rs  sync_real_scan_cancellation.rs  us10_swap_exact_output.rs  us11_wallet_status.rs  us12_network_rules.rs  us15_server_config.rs  us16_swap_status_refresh.rs  us1_backup_challenge.rs  us2_send_proposals.rs  us3_shielding.rs  us4_restore.rs  us5_address_rotation.rs  us6_import_ufvk.rs  us7_signing_request_rules.rs  us8_swap_to_zec.rs  us9_swap_from_zec.rs  wallet_db_encryption_and_migrations.rs
crates/zstash-network/: Cargo.toml
crates/zstash-network/src/: exchange_rate.rs  grpc_client.rs  http_client.rs  lib.rs  near_intents.rs  rustls_provider.rs  transport.rs
crates/zstash-network/tests/: ci_lightwalletd_probe.rs  http_client_user_agent.rs  near_intents_quote_retry.rs  near_intents_tokens_parse.rs  us8_near_intents.rs
crates/zstash-tor/: Cargo.toml
crates/zstash-tor/src/: manager.rs
crates/zstash-tor/tests/: us10_tor_state.rs
xtask/: Cargo.toml
xtask/src/: cli.rs  lib.rs  main.rs
xtask/src/cmd/: mod.rs
xtask/tests/: cli.rs  live_pid.rs  parser_fixtures.rs  sample_sockets.rs
(+673 files in other folders)
