[workspace]
resolver = "2"
members = [
  "crates/zbag-core",
  "crates/zbag-engine",
  "crates/zbag-network",
  "crates/zbag-keystone",
  "crates/zbag-tor",
  "apps/zbag-app-tauri/src-tauri",
  "apps/zbag-cli",
  "xtask",
]

[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.96.1"
license-file = "LICENSE"
repository = "https://zbag.app"

[workspace.dependencies]
# Zcash libraries (aligned with librustzcash/Zashi)
zcash_client_backend = { version = "0.23", features = ["orchard", "transparent-inputs", "pczt", "tor", "lightwalletd-tonic-tls-webpki-roots", "unstable"] }
zcash_client_sqlite = { version = "0.21.1", features = ["orchard", "transparent-inputs", "serde", "unstable"] }
zcash_primitives = { version = "0.28" }
zcash_proofs = { version = "0.28", features = ["bundled-prover"], default-features = false }
zcash_protocol = { version = "0.9" }
zcash_transparent = "0.8"

# Modules relocated from zcash_primitives in 0.20+
zip32 = "0.2"

# Mnemonic + randomness
bip39 = { version = "2", features = ["zeroize"] }
rand = "0.8"

# Crypto (KDF + AEAD)
argon2 = "0.5"
chacha20poly1305 = "0.10"

# Async runtime (minimal features: rt, rt-multi-thread, sync, time, macros, fs)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "fs"] }

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Encoding
base64 = "0.22"
hex = "0.4"
pczt = "0.7"
orchard = "0.14"

# gRPC
tonic = "0.14"
prost = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }

# HTTP
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }

# Database
rusqlite = { version = "0.37", features = ["bundled-sqlcipher"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Zeroization
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.8"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# OS keychain
keyring = "2"

# URL parsing
url = "2"

# Test utilities
tempfile = "3"

[patch.crates-io]
# CEF POC pin: keep Tauri Rust crates on a single feat/cef snapshot.
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "6fd733b2d6255d358e88ad19cb15dc7d22b293ac" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", rev = "6fd733b2d6255d358e88ad19cb15dc7d22b293ac" }

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
