[package]
name = "zstash-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for zSTASH Zcash wallet"

[[bin]]
name = "zstash"
path = "src/main.rs"

[dependencies]
# zSTASH crates
zstash-core = { path = "../../crates/zstash-core" }
zstash-engine = { path = "../../crates/zstash-engine" }
zstash-network = { path = "../../crates/zstash-network" }
zstash-tor = { path = "../../crates/zstash-tor" }

# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Password input
rpassword = "7"

# Progress display
indicatif = { version = "0.17", features = ["tokio"] }

# Console output
console = "0.15"

# Async runtime
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Zeroization
zeroize = { workspace = true }

# Encoding
base64 = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database (for direct queries if needed)
rusqlite = { workspace = true }

# Home directory
dirs = "6"
