[package]
name = "zstash-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "zstash-tui"
path = "src/main.rs"

[dependencies]
# zSTASH crates
zstash-core = { path = "../../crates/zstash-core" }
zstash-engine = { path = "../../crates/zstash-engine" }

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Database (reuse workspace)
rusqlite = { workspace = true }
zcash_client_sqlite = { workspace = true }
zcash_client_backend = { workspace = true }
zcash_protocol = { workspace = true }

# Utilities (reuse workspace)
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
zeroize = { workspace = true }
