[package]
name = "bagz-keystone"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
pczt.workspace = true
zcash_client_backend.workspace = true
zcash_protocol.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
zip32.workspace = true
