[package]
name = "zkore-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
bip39.workspace = true
hex.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
rand.workspace = true
rusqlite.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zeroize.workspace = true
keyring.workspace = true
zip32.workspace = true
zcash_proofs.workspace = true
prost.workspace = true
zkore-core = { path = "../zkore-core" }
zkore-keystone = { path = "../zkore-keystone" }
zkore-network = { path = "../zkore-network" }
zkore-tor = { path = "../zkore-tor" }
zcash_client_backend.workspace = true
zcash_client_sqlite.workspace = true
zcash_primitives.workspace = true
zcash_protocol.workspace = true
zcash_transparent.workspace = true
