[package]
name = "zkore-keystone"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zcash_client_backend.workspace = true
zcash_protocol.workspace = true
thiserror.workspace = true

[dev-dependencies]
zip32.workspace = true
