[package]
name = "zkore-tor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
http = "1"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zkore-core = { path = "../zkore-core" }
zcash_client_backend.workspace = true
