[package]
name = "zstash-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"], optional = true }
uuid.workspace = true
zeroize.workspace = true

[features]
default = []
async = ["dep:tokio"]

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
