[package]
name = "zstash-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bytes = "1"
chrono.workspace = true
http = "1"
parking_lot = "0.12"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tonic = { workspace = true, features = ["tls-native-roots"] }
prost.workspace = true
reqwest.workspace = true
http-body-util = "0.1"
zcash_client_backend.workspace = true
zcash_primitives.workspace = true
zcash_protocol.workspace = true
zstash-core = { path = "../zstash-core" }
zstash-tor = { path = "../zstash-tor" }
