[package]
name = "zstash-tor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zstash-core = { path = "../zstash-core", features = ["async"] }
zcash_client_backend.workspace = true

[dev-dependencies]
tempfile = "3"
