[package]
name = "zstash-app-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "zSTASH Desktop Wallet (Tauri)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zstash_app_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
zstash-core = { path = "../../../crates/zstash-core" }
zstash-engine = { path = "../../../crates/zstash-engine" }
zstash-network = { path = "../../../crates/zstash-network" }
zstash-keystone = { path = "../../../crates/zstash-keystone" }
zstash-tor = { path = "../../../crates/zstash-tor" }

tauri = { version = "2", default-features = false, features = ["compression", "common-controls-v6", "dynamic-acl"] }
tauri-plugin-opener = "2"

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true

# Test bridge dependencies (optional)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "limit"], optional = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Build this app against Tauri's experimental CEF runtime.
cef-runtime = ["tauri/cef"]
# Enable HTTP test bridge for E2E testing (Playwright/Chrome MCP)
# When enabled, the app runs as an HTTP server instead of Tauri webview
test-bridge = ["dep:axum", "dep:tower", "dep:tower-http"]
